correct button spacing

--- a/scss/main-style.scss
+++ b/scss/main-style.scss
@@ -179,7 +179,7 @@ ul{
                 color: black;
                 position: absolute;
                 top: 8px;
-                right: 10px;
+                right: 15px;
                 font-family: FontAwesome;
                 opacity: 0.3;
               }
